cluster/base/infrastructure/23-dex/config/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex
  namespace: dex
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - dex.homelab.data-harness.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dex
          port: 5556
